--- a/index.html
+++ b/index.html
@@ -243,63 +243,90 @@
     <!-- main result -->
      <div class="columns is-centered has-text-centered">
       <div class="column is-six-fifths">
-        <h2 class="title is-3">Results on CALVIN Benchmark</h2>
-        <!-- <img id="calvin_result" width="70%" src="static/images/calvin_results.png">-->
+        <h2 class="title is-3">CALVIN Benchmark</h2>
+        <div class="content has-text-justified">
+          <p>
+          <a href="http://calvin.cs.uni-freiburg.de/"><b>CALVIN</b></a> is a challenging benchmark focusing on learning language-conditioned policy for long-horizon robot manipulation.
+          It contains 34 manipulation tasks and features unconstrained language instructions.
+          The environment contains a Franka Emika Panda robot with a parallel-jaw gripper and a desk with a sliding door, a drawer that can be opened or closed, blocks with different colors, an LED and a light bulb that can be turned on or off.
+          CALVIN contains 4 different environments A, B, C, and D.
+          These four environments are different in desk colors and object configurations.
+          We perform experiments on CALVIN in four settings.<br>
+          </p>
+        </div>
         <div class="columns">
           <div class="column has-text-left">
               <img src="static/images/ABCD_D.png" class="interpolation-image"
-           alt="" style="display: block; margin-left: auto; margin-right: auto"/>
+              alt="" style="display: block; margin-left: auto; margin-right: auto"/>
           </div>
-
           <div class="column has-text-left">
               <img src="static/images/ABC_D.png" class="interpolation-image"
-           alt="" style="display: block; margin-left: auto; margin-right: auto"/>
+            alt="" style="display: block; margin-left: auto; margin-right: auto"/>
           </div>
         </div>
+        <div class="content has-text-justified">
+          <b>1. Long-Horizon Multi-Task Learning (ABCD->D)</b> <br>
+          In this setting, the robot is trained with data collected from environments A, B, C, and D and evaluated in environment D.
+          During the evaluation, the robot aims to continuously solve up to 5 tasks by understanding a series of 5 language instructions in a row.
+          The robot receives the next task only if the current one is successfully completed.
+          GR-1 outperforms baseline methods in task success rates.
+          In particular, it improves the success rate of completing 5 tasks in a row from 38.3% to 73.1%.
+          Average length is the average number of completed task in a row of 5.
+          GR-1 improves average length from 3.06 to 4.21 showing strong capability in long-horizon multi-tasking.<br>
+        </div>
+
+        <div class="content has-text-justified">
+          <b>2. Zero-Shot Generalization to Unseen Scenes (ABC->D)</b> <br>
+          In this setting, the robot is trained with data collected from environment A, B, and C and evaluated in environment D, which is unseen during training.
+          The robot needs to understand semantic information from the data collected in environment A, B, and C and generalize them to environment D.
+          GR-1 outperforms baseline methods by a large margin.
+          We hypothesize that the strong generalization capability stems from being exposed to large-scale data in pre-training.<br>
+        </div>
+
         <div class="columns">
           <div class="column has-text-left">
               <img src="static/images/10_percent_data.png" class="interpolation-image"
            alt="" style="display: block; margin-left: auto; margin-right: auto"/>
           </div>
-
           <div class="column has-text-left">
               <img src="static/images/unseen_lang.png" class="interpolation-image"
            alt="" style="display: block; margin-left: auto; margin-right: auto"/>
           </div>
         </div>
+
         <h3 class="has-text-centered">
           <div class="content has-text-justified">
-          <p>
-            <br>
-            <a href="http://calvin.cs.uni-freiburg.de/"><b>CALVIN</b></a> is a challenging benchmark fosuing on learning language-conditioned policy for long-horizon robot manipulation.
-            It contains 34 tasks and 4 different environments A, B, C, and D.
-            We perform experiments on CALVIN in four settings<br>
-            &nbsp; 1). Long-Horizon Multi-Task Learning <br>
-            &nbsp; 2). Zero-Shot Generalization to Unseen Scenes <br>
-            &nbsp; 3). Small Data <br>
-            &nbsp; 4). Zero-Shot Generalization to Unseen Languages <br>
-            <br>
-            <b>Long-Horizon Multi-Task Learning (ABCD->D)</b> <br>
-            In this setting, the robot is trained with data collected from environments A, B, C, and D and evaluated in environment D.
-            During the evaluation, the robot is instructed to perform 5 tasks in a row. 
-            This helps evaluate the capability of long-horizon multi-tasking.<br>
-            <br>
-            <b>Zero-Shot Generalization to Unseen Scenes (ABC->D)</b><br>
-            The robot is trained with data collected from environment A, B, and C and evaluated in environment D, which is unseen during training.<br>
-            <br>
-            <b>Small Data</b><br>
-            Robot data is expensive.
-            To evaluate the capability of learning from small data, we sampled 10% data from the training data of the ABCD->D split for training.
-            Specifically, we sampled 66 trajectories for each of the 34 tasks, i.e. 2244 trajectories in total.<br>
-            <br>
-            <b>Zero-Shot Generalization to Unseen Languages</b><br>
-            We leveraged GPT-4 to generate synonymous instructions for each of the 34 tasks and used these unseen language instructions during evaluation.<br>
-            <br>
-            GR-1 showcases strong performance and outperforms the baseline methods in all four settings.
-            In particular, GR-1 shows powerful zero-shot generealization capability and possesses strong data efficiency.<br>
-          </p>
-        </div>
+            <p>
+              <b>3. Data Efficiency (10% ABCD->D)</b><br>
+              Robot data is expensive.
+              We want to understand how GR-1 performs when given a small amount of data.
+              We sampled about 10% data from the training data of the ABCD->D split for training.
+              Specifically, we sampled 66 trajectories for each of the 34 tasks, i.e. 2244 trajectories in total (ABCD->D split contains 22966 training trajectories).
+              The performance of all methods degrades.
+              We compare the success rate of GR-1 when trained on the 10% data and the full data.
+              The success rates of tasks involving block manipulation decreases the most.
+              These tasks are difficult because the robot needs to first grasp the correct block and then manipulate it according to the language instruction.
+              <br>
+              <br>
+              <b>4. Zero-Shot Generalization to Unseen Languages</b><br>
+              Human languages are diverse, i.e., there are different ways of describing a task.
+              We aim to test whether GR-1 is able to generalize to languages that are different from those seen in the training in this setting.
+              We leveraged <a href="https://openai.com/research/gpt-4"><b>GPT-4</b></a> to generate synonymous instructions for each of the 34 tasks and used these unseen language instructions during evaluation.
+              Examples of generated languages can be found in the below figure.
+              GR-1 is able to generalize to unseen languages with a high success rate.
+              We hypothesize this generalization capability attributes to being exposed to diverse languages in large video dataset during pre-training and freezing the strong CLIP text encoder during the training process.
+              <br>
+              <div class="column is-centered has-text-left">
+                <img id="framework" width="60%" src="static/images/unseen_lang_exp.png">
+              </div>
+              <br>
+            </p>
+          </div>
         </h3>
+        
+        
+
+
       </div>
     </div>
   </div>
@@ -313,24 +340,32 @@
         <h2 class="title is-3">Results on Real Robot Experiments</h2>
         <img id="robot_result" width="100%" src="static/images/real_robot.png">
         <!--<img id="robot_result" width="70%" src="static/images/real_robot_results.png">-->
-        <div class="columns">
-          <div class="column has-text-left">
-              <img src="static/images/real_results.png" class="interpolation-image"
-           alt="" style="display: block; margin-left: auto; margin-right: auto"/>
-          </div>
+        <div class="column has-text-left" style="padding-top: 25px;">
+          <p>
+            We also performed extensive real robot experiments to evaluate how GR-1 works in the real world.
+            We first evaluated on object transportation in three settings: Seen Objects, Unseen Instances (unseen object instances of seen instances), and Unseen Categories (unseen objects of unseen categories).
+            Example instructions include "put the broccoli onto the plate".
+            We also performed experiments on articulated object manipulation.
+            Example instructions include "open the drawer".
+            Results are shown in the below figure.
+          </p>
+        </div>
+        <div class="column has-text-left">
+            <img id="robot_result" width="60%" src="static/images/real_results.png"/>
+        </div>
 
-          <div class="column has-text-left" style="padding-top: 25px;">
+        <h3 class="has-text-centered">
+          <div class="content has-text-justified">
             <p>
-              We also performed real robot experiments to evaluate how GR-1 works in the real world.
-              We first performed object transportation experiments.
-              We evaluated on three settings: Seen Objects, Unseen Instances (unseen object instances of seen instances), and Unseen Categories (unseen objects of unseen categories).
-              Example instructions include "put the broccoli onto the plate".
-              We also performed experiments on articulated object manipulation.
-              Example instructions include "open the drawer".
-              GR-1 outperforms baseline methods and showcase strong potentials in zero-shot generalization to unseen objects.
+              <b>1. Seen Object Transportation</b><br>
+              The robot is trained to perform transporting one of the three objects from the plate to the table or vice versa.
+              In this setting, we evaluate the performance on transporting these three objects in 1) training scenes 2) scenes with distrators and 3) scenes with background changes and distrators.
+              In the scenes with distractors, we introduce three unseen objects, i.e., a corn, a tomato, and a yellow peach.
+              In the scenes with background changes and distrators, we futher add a wooden board and an unseen bowl.
+
             </p>
           </div>
-        </div>
+        </h3>
       </div>
     </div>
   </div>
