--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
               GR-1 is able to generalize to unseen languages with a high success rate.
               We hypothesize this generalization capability attributes to being exposed to diverse languages in large video dataset during pre-training and freezing the strong CLIP text encoder during the training process.
               <br>
-              <div class="column is-centered has-text-left">
-                <img id="framework" width="60%" src="static/images/unseen_lang_exp.png">
+              <div class="columns is-centered has-text-centered" style="padding-top: 30px;">
+                <img id="framework" width="70%" src="static/images/unseen_lang_exp.png">
               </div>
               <br>
             </p>
@@ -350,7 +350,7 @@
             Results are shown in the below figure.
           </p>
         </div>
-        <div class="column has-text-left">
+        <div class="columns is-centered has-text-centered">
             <img id="robot_result" width="60%" src="static/images/real_results.png"/>
         </div>
 
