--- a/index.html
+++ b/index.html
@@ -114,67 +114,67 @@
   </div>
 </section>
 
-<section class="hero is-light is-small">
-  <div class="hero-body">
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- main result -->
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="item calvin_0">
+        <div class="item normal_0">
 
-          <video poster="" id="calvin_0" autoplay controls muted loop playsinline height="90%">
+          <video poster="" id="normal_0" autoplay controls muted loop playsinline height="90%">
             <source src="static/videos/intro/calvin_0.mp4"
                     type="video/mp4">
           </video>
         </div>
-        <div class="item calvin_1">
+        <div class="item normal_1">
 
-          <video poster="" id="calvin_1" autoplay controls muted loop playsinline height="90%">
+          <video poster="" id="normal_1" autoplay controls muted loop playsinline height="90%">
             <source src="static/videos/intro/calvin_1.mp4"
                     type="video/mp4">
           </video>
         </div>
-        <div class="item calvin_2">
+        <div class="item distractors_1">
 
-          <video poster="" id="calvin_2" autoplay controls muted loop playsinline height="90%">
+          <video poster="" id="distractors_1" autoplay controls muted loop playsinline height="90%">
             <source src="static/videos/intro/calvin_2.mp4"
                     type="video/mp4">
           </video>
         </div>
-        <div class="item calvin_3">
+        <div class="item distractors_2">
 
-          <video poster="" id="calvin_3" autoplay controls muted loop playsinline height="90%">
+          <video poster="" id="distractors_2" autoplay controls muted loop playsinline height="90%">
             <source src="static/videos/intro/calvin_3.mp4"
                     type="video/mp4">
           </video>
         </div>
       </div>
     </div>
-  </div>
-</section>
-
-<section class="hero is-light is-small">
-  <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="item real_0">
-          <video poster="" id="real_0" autoplay controls muted loop playsinline height="90%">
+        <div class="item unseen_cat_0">
+
+          <video poster="" id="unseen_cat_0" autoplay controls muted loop playsinline height="90%">
             <source src="static/videos/intro/real_0.mp4"
                     type="video/mp4">
           </video>
         </div>
-        <div class="item real_1">
-          <video poster="" id="real_1" autoplay controls muted loop playsinline height="90%">
+        <div class="item unseen_cat_1">
+
+          <video poster="" id="unseen_cat_1" autoplay controls muted loop playsinline height="90%">
             <source src="static/videos/intro/real_1.mp4"
                     type="video/mp4">
           </video>
         </div>
-        <div class="item real_2">
-          <video poster="" id="real_2" autoplay controls muted loop playsinline height="90%">
+        <div class="item unseen_inst_0">
+
+          <video poster="" id="unseen_inst_0" autoplay controls muted loop playsinline height="90%">
             <source src="static/videos/intro/real_2.mp4"
                     type="video/mp4">
           </video>
         </div>
-        <div class="item real_3">
-          <video poster="" id="real_3" autoplay controls muted loop playsinline height="90%">
+        <div class="item unseen_inst_1">
+
+          <video poster="" id="unseen_inst_1" autoplay controls muted loop playsinline height="90%">
             <source src="static/videos/intro/real_3.mp4"
                     type="video/mp4">
           </video>
@@ -475,6 +475,17 @@
           </video>
         </div>
       </div>
+    </div>
+    <div class="container">
+      <video poster="" id="unseen_cat_0" autoplay controls muted loop playsinline width="33%" style="border-radius: 4%;">
+        <source src="static/videos/real_exp/open_the_drawer.mp4"
+                type="video/mp4">
+      </video>
+      <video poster="" id="unseen_cat_0" autoplay controls muted loop playsinline width="33%" style="border-radius: 4%;">
+        <source src="static/videos/real_exp/close_the_drawer.mp4"
+                type="video/mp4">
+      </video>
+      <img width="33%" style="border-radius: 4%; border-style: solid; border-color: #d8d8d8;" src="static/images/none.png"/>
     </div>
   </div>
 </section>
